--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     <!-- <script src="./js/task-15.js" type="module"></script> -->
     <!-- <script src="./js/task-16.js" type="module"></script> -->
     <!-- <script src="./js/task-17.js" type="module"></script> -->
-    <script src="./js/task-18.js" type="module"></script>
+    <!-- <script src="./js/task-18.js" type="module"></script> -->
     <!-- <script src="./js/task-19.js" type="module"></script> -->
     <!-- <script src="./js/task-20.js" type="module"></script> -->
     <!-- <script src="./js/task-21.js" type="module"></script> -->
+    <script src="./js/task-41.js" type="module"></script>
 </body>
 
 </html>
